# ics2radicale

./: .flake8  .gitignore  README.md  cache.py  import_ics.py  pyproject.toml  run_ics2radicale.py  tests.py
ics2radicale/: cache.py  import_ics.py  merge_events.py
tests/: test_filter.py  test_merge.py
